merge: integrer module user (login, register, 2FA, profil, admin users, Google OAuth, avatar IA)